# umimic

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api.md  conf.py  configuration.md  index.md  pypi-trusted-publishing.md  quickstart.md  readthedocs-github.md
tests/: conftest.py
tests/test_dynamics/: test_gillespie.py  test_moment_equations.py  test_ode_system.py  test_rates.py
tests/test_inference/: test_kalman.py  test_likelihood.py  test_mle.py
tests/test_integration/: test_simulate_and_infer.py
tests/test_observations/: test_bli.py  test_cell_counts.py  test_tumor_volume.py
tests/test_pipeline/: test_config.py  test_experiment.py  test_runner_logging.py
tests/test_pk/: test_compartment.py  test_exposure.py
tests/test_release/: test_release_readiness.py
umimic/: __init__.py  types.py
umimic/dynamics/: gillespie.py  moment_equations.py  ode_system.py  rates.py  states.py  tau_leaping.py
umimic/inference/: diagnostics.py  hierarchical.py  kalman.py  likelihood.py  mcmc.py  mle.py  priors.py  smc.py
umimic/observations/: base.py  biomarkers.py  bli.py  cell_counts.py  multimodal.py  tumor_volume.py
umimic/pipeline/: config.py  experiment.py  results.py  runner.py  transfer.py
umimic/pk/: compartment.py  dosing.py  exposure.py  luciferin.py
umimic/visualization/: diagnostics.py  dose_response.py  posteriors.py  style.py  trajectories.py
